--- a/client/index.html
+++ b/client/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
-    <title>FootballRecruit</title>
+    <title>Portal Soccer</title>
     <style>
       /* Minimal splash styles so it appears before JS loads */
       #splash { position: fixed; inset: 0; display: grid; place-items: center; background: #ffffff; z-index: 9999; transition: opacity .35s ease; }
@@ -22,7 +22,7 @@
     <!-- Splash screen (removed by main.jsx after mount) -->
     <div id="splash" aria-hidden="true">
       <div class="splash-inner">
-        <img class="splash-logo" src="/logo.png" alt="FootballRecruit" />
+        <img class="splash-logo" src="/logo.png" alt="Portal Soccer" />
         <div class="spinner"></div>
       </div>
     </div>
